# cpp_bindings_demo

./: .gitmodules  README.md  demo.py  demo.sh  docker-compose.yml
code/: CMakeLists.txt  pyproject.toml
code/bindings/: CMakeLists.txt  bindings.pyx
code/bindings/cpp/src/: main.cu
code/cpp/: CMakeLists.txt
code/cpp/cmake/: config.cmake.in
code/cpp/include/: saxpy.hpp
code/cpp/include_only/: saxpy_header_only.hpp
code/cpp/saxpy/: CMakeLists.txt
code/cpp/saxpy/src/: saxpy.cu
code/cpp/saxpy_header_only/: CMakeLists.txt
code/cpp/saxpy_header_only/cmake/: config-header-only.cmake.in
code/cpp/saxpy_header_only/include/: saxpy_header_only.hpp
code/cpp/src/: main.cu  saxpy.cu
code/pysaxpy/: CMakeLists.txt  __init__.py  pyproject.toml
code/pysaxpy/pysaxpy/: CMakeLists.txt  __init__.py  _saxpy.pxd  pysaxpy.pyx
code/pysaxpy/pysaxpy/cython_saxpy/: CMakeLists.txt  __init__.py  cython_saxpy.pyx
code/pysaxpy/pysaxpy/pybind_saxpy/: CMakeLists.txt  __init__.py  cpp_bindings.cpp  cpp_bindings_header_only.cu  pybind_saxpy.py
docker/: Dockerfile
